--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.3.0",
     "svelte-loader": "^2.13.6",
+    "url-loader": "^4.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
